--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ img:nth-child(2), img:nth-child(5) {
   }
 
   img:nth-child(2), img:nth-child(3), img:nth-child(4) {
-    width: 33.3%;
+    width: 33.3333%;
   }
 
 }
@@ -59,17 +59,19 @@ img:nth-child(2), img:nth-child(5) {
 @media only screen and (min-width: 60em) {
 
   img:nth-child(1) {
-    width: 66.6667%;
+    width: 66.6666%;
+    display: block;
   }
 
   img:nth-child(2) {
     display: block;
-    width: 33.3%;
+    width: 33.3333%;
   }
 
   img:nth-child(3), img:nth-child(4), img:nth-child(5) {
     display: block;
     width: 33.3333%;
+    float: left;
   }
 
 }
